force-app/main/default/objects/ucinn_ascendv2__Payment__c/ucinn_ascendv2__Payment__c.object-meta.xml
<CustomObject>
    <description>Payment for pledges or gifts.</description>
    <label>Payment</label>
    <nameField>
        <label>Payment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>