force-app/main/default/objects/ucinn_ascendv2__Payment__c/fields/Activity_Code__c.field-meta.xml
<CustomField>
    <fullName>Activity_Code__c</fullName>
    <formula>CASE( ucinn_ascendv2__Opportunity__r.Type , &apos;Matching&apos;,&apos;OG&apos;,
                                            &apos;Outright Gift&apos;,&apos;OG&apos;,
                                            &apos;Outright&apos;,&apos;OG&apos;,
                                            &apos;Planned Gift&apos;, &apos;DP&apos;,
                                            &apos;Discounted Planned Gift&apos;, &apos;DP&apos;,
                                            &apos;Discounted Gift&apos;, &apos;G&apos;,
                                            &apos;Deferred Liability&apos;, &apos;DC&apos;,
                                            &apos;Pledge Commitment&apos;,&apos;PP&apos;,
                                            &apos;Installment Based Membership&apos;,&apos;PP&apos;,
                                            &apos;Auto Renewing Membership&apos;,&apos;OG&apos;,
                                            &apos;One-Time Membership&apos;,&apos;OG&apos;,
                                            &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Activity Code</label>
    <type>Text</type>
</CustomField>