force-app/main/default/objects/ucinn_ascendv2__Payment__c/fields/Asset_Type__c.field-meta.xml
<CustomField>
    <fullName>Asset_Type__c</fullName>
    <label>Asset Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Art Work</fullName>
            </value>
            <value>
                <fullName>Cash</fullName>
            </value>
            <value>
                <fullName>Closely Held Stock</fullName>
            </value>
            <value>
                <fullName>Contingent Commitment</fullName>
            </value>
            <value>
                <fullName>Direct to University</fullName>
            </value>
            <value>
                <fullName>Equipment</fullName>
            </value>
            <value>
                <fullName>Farm Property</fullName>
            </value>
            <value>
                <fullName>Gifts in Kind</fullName>
            </value>
            <value>
                <fullName>Grain</fullName>
            </value>
            <value>
                <fullName>Insurance Bequest</fullName>
            </value>
            <value>
                <fullName>Insurance Commitment</fullName>
            </value>
            <value>
                <fullName>IRA Rollover</fullName>
            </value>
            <value>
                <fullName>Livestock</fullName>
            </value>
            <value>
                <fullName>Machinery</fullName>
            </value>
            <value>
                <fullName>Marketable Securities</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Other Non-Cash</fullName>
            </value>
            <value>
                <fullName>Pledge Commitment</fullName>
            </value>
            <value>
                <fullName>Real Estate, Non-Farm</fullName>
            </value>
            <value>
                <fullName>Retirement Assets</fullName>
            </value>
            <value>
                <fullName>Testamentary Trust</fullName>
            </value>
            <value>
                <fullName>Trust held by ISUF</fullName>
            </value>
            <value>
                <fullName>Trust held by others</fullName>
            </value>
            <value>
                <fullName>Unknown Deceased Will Commitment</fullName>
            </value>
            <value>
                <fullName>Unknown Gift Amount</fullName>
            </value>
            <value>
                <fullName>Will Commitment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>