force-app/main/default/objects/ucinn_ascendv2__Payment__c/fields/Custom_Sent_to_GL__c.field-meta.xml
<CustomField>
    <fullName>Custom_Sent_to_GL__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Use in GL batch</description>
    <label>Custom Sent to GL</label>
    <type>Checkbox</type>
</CustomField>