force-app/main/default/objects/ucinn_ascendv2__Payment__c/fields/Designation_Text__c.field-meta.xml
<CustomField>
    <fullName>Designation_Text__c</fullName>
    <label>Designation Text</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>