force-app/main/default/objects/ucinn_ascendv2__Payment__c/fields/First_Name__c.field-meta.xml
<CustomField>
    <fullName>First_Name__c</fullName>
    <formula>ucinn_ascendv2__Contact__r.FirstName</formula>
    <label>First Name</label>
    <type>Text</type>
</CustomField>