force-app/main/default/objects/ucinn_ascendv2__Payment__c/fields/Formal_Salutation_Spouse__c.field-meta.xml
<CustomField>
    <fullName>Formal_Salutation_Spouse__c</fullName>
    <formula>ucinn_ascendv2__Contact__r.ucinn_ascendv2__Preferred_Spouse__r.Formal_Salutation__c</formula>
    <label>Formal Salutation Spouse</label>
    <type>Text</type>
</CustomField>