force-app/main/default/objects/ucinn_ascendv2__Payment__c/fields/Fund_Code__c.field-meta.xml
<CustomField>
    <fullName>Fund_Code__c</fullName>
    <formula>ucinn_ascendv2__Designation__r.Name</formula>
    <label>Fund Code</label>
    <type>Text</type>
</CustomField>