force-app/main/default/objects/ucinn_ascendv2__Payment__c/fields/Fund_Text__c.field-meta.xml
<CustomField>
    <fullName>Fund_Text__c</fullName>
    <label>Fund Text</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>