force-app/main/default/objects/ucinn_ascendv2__Payment__c/fields/Grand_Parent_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Grand_Parent_Campaign__c</fullName>
    <formula>ucinn_ascendv2__Campaign__r.Parent.Parent.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Campaign</label>
    <type>Text</type>
</CustomField>