force-app/main/default/objects/ucinn_ascendv2__Payment__c/fields/Income_Attribute__c.field-meta.xml
<CustomField>
    <fullName>Income_Attribute__c</fullName>
    <formula>TEXT(ucinn_ascendv2__Designation_Detail__r.Income_Attribute__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Income Attribute</label>
    <type>Text</type>
</CustomField>