force-app/main/default/objects/ucinn_ascendv2__Payment__c/fields/Income_Type_Code__c.field-meta.xml
<CustomField>
    <fullName>Income_Type_Code__c</fullName>
    <formula>CASE( ucinn_ascendv2__Opportunity__r.Type , &apos;Discounted Gift&apos;, &apos;T&apos;,
                                            &apos;Planned Gift&apos;,&apos;W&apos;,
                                            &apos;Outright Gift&apos;,&apos;G&apos;,
                                            &apos;Outright&apos;,&apos;G&apos;,
                                            &apos;Pledge Commitment&apos;,&apos;P&apos;,
                                            &apos;Matching&apos;,&apos;G&apos;,
                                            &apos;Discounted Planned Gift&apos;,&apos;S&apos;,
                                            &apos;Deferred Liability&apos;,&apos;E&apos;,
                                            &apos;Installment Based Membership&apos;,&apos;P&apos;,
                                            &apos;Auto Renewing Membership&apos;,&apos;G&apos;,
                                            &apos;One-Time Membership&apos;,&apos;G&apos;,
                                            &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Income Type Code</label>
    <type>Text</type>
</CustomField>