force-app/main/default/objects/ucinn_ascendv2__Payment__c/fields/Income_Type_Description__c.field-meta.xml
<CustomField>
    <fullName>Income_Type_Description__c</fullName>
    <description>Description that goes with the income type code</description>
    <formula>CASE( ucinn_ascendv2__Opportunity__r.Type , &apos;Discounted Gift&apos;, &apos;Discounted Gift Payment&apos;,
                                            &apos;Planned Gift&apos;,&apos;Planned Gift Payment&apos;,
                                            &apos;Outright Gift&apos;,&apos;Outright Gift&apos;,
                                            &apos;Outright&apos;,&apos;Outright Gift&apos;,
                                            &apos;Pledge Commitment&apos;,&apos;Pledge Payment&apos;,
                                            &apos;Matching&apos;,&apos;Outright Gift&apos;,
                                            &apos;Discounted Planned Gift&apos;,&apos;Discounted Planned Gift&apos;,
                                            &apos;Deferred Liability&apos;,&apos;Deferred Liability&apos;,
                                            &apos;Installment Based Membership&apos;,&apos;Pledge Payment&apos;,
                                            &apos;Auto Renewing Membership&apos;,&apos;Outright Gift&apos;,
                                            &apos;One-Time Membership&apos;,&apos;Outright Gift&apos;,
                                            &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Income Type Description</label>
    <type>Text</type>
</CustomField>