force-app/main/default/objects/ucinn_ascendv2__Payment__c/fields/Is_Sent_to_G_L__c.field-meta.xml
<CustomField>
    <fullName>Is_Sent_to_G_L__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used for mark if the Payment is sent to the GL System</description>
    <label>Is Sent to G / L</label>
    <type>Checkbox</type>
</CustomField>