force-app/main/default/objects/ucinn_ascendv2__Payment__c/fields/ISUF_External_ID__c.field-meta.xml
<CustomField>
    <fullName>ISUF_External_ID__c</fullName>
    <externalId>true</externalId>
    <label>ISUF External ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>