force-app/main/default/objects/ucinn_ascendv2__Payment__c/fields/ISUF_Unrestricted_Estate_Gift_Formula__c.field-meta.xml
<CustomField>
    <fullName>ISUF_Unrestricted_Estate_Gift_Formula__c</fullName>
    <description>Pulls value from opportunity picklist</description>
    <formula>text(ucinn_ascendv2__Opportunity__r.Unrestricted_Estate_Prov__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unrestricted Estate Gift</label>
    <type>Text</type>
</CustomField>