force-app/main/default/objects/ucinn_ascendv2__Payment__c/fields/Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Last_Name__c</fullName>
    <formula>ucinn_ascendv2__Contact__r.LastName</formula>
    <label>Last Name</label>
    <type>Text</type>
</CustomField>