force-app/main/default/objects/ucinn_ascendv2__Payment__c/fields/Preferred_Address_Constituent__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Address_Constituent__c</fullName>
    <formula>ucinn_ascendv2__Contact__r.ucinn_ascendv2__Preferred_Address_Formula__c</formula>
    <label>Preferred Address Constituent</label>
    <type>Text</type>
</CustomField>