force-app/main/default/objects/ucinn_ascendv2__Payment__c/fields/Preferred_Email__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Email__c</fullName>
    <formula>IF ( ISBLANK( ucinn_ascendv2__Contact__c ),  ucinn_ascendv2__Account__r.ucinn_ascendv2__Email__c  ,  ucinn_ascendv2__Contact__r.Email  )</formula>
    <label>Preferred Email</label>
    <type>Text</type>
</CustomField>