force-app/main/default/objects/ucinn_ascendv2__Payment__c/fields/Receipt_Notes__c.field-meta.xml
<CustomField>
    <fullName>Receipt_Notes__c</fullName>
    <label>Receipt Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>