force-app/main/default/objects/ucinn_ascendv2__Payment__c/fields/Special_Gift_Types__c.field-meta.xml
<CustomField>
    <fullName>Special_Gift_Types__c</fullName>
    <label>Special Gift Types</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>University Gifts</fullName>
            </value>
            <value>
                <fullName>Achievement Fund Gifts</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>