force-app/main/default/objects/ucinn_ascendv2__Payment__c/fields/Special_Gift_Types_Formula__c.field-meta.xml
<CustomField>
    <fullName>Special_Gift_Types_Formula__c</fullName>
    <formula>text(ucinn_ascendv2__Opportunity__r.Special_Will_Types__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Special Gift Types</label>
    <type>Text</type>
</CustomField>