force-app/main/default/objects/ucinn_ascendv2__Payment__c/fields/ucinn_ascendv2__Acknowledgement_Description_Formula__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Acknowledgement_Description_Formula__c</fullName>
    <description>For Gift Receipt</description>
    <formula>ucinn_ascendv2__Designation__r.ucinn_ascendv2__Acknowledgement_Description__c</formula>
    <label>Acknowledgement Description</label>
    <type>Text</type>
</CustomField>