force-app/main/default/objects/ucinn_ascendv2__Payment__c/fields/ucinn_ascendv2__Adjusted_Gift__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Adjusted_Gift__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Adjusted Pledge/Gift</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Payments (Adjusted Gift)</relationshipLabel>
    <relationshipName>Payments_Adjusted_Gift</relationshipName>
    <type>Lookup</type>
</CustomField>