force-app/main/default/objects/ucinn_ascendv2__Payment__c/fields/ucinn_ascendv2__Adjustment_Reason__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Adjustment_Reason__c</fullName>
    <label>Adjustment Reason (DEPRECATED)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Amount Change</fullName>
            </value>
            <value>
                <fullName>Appeal Code Change</fullName>
            </value>
            <value>
                <fullName>Data Entry Error</fullName>
            </value>
            <value>
                <fullName>Designation Change</fullName>
            </value>
            <value>
                <fullName>Donor Request</fullName>
            </value>
            <value>
                <fullName>Expired Credit Card</fullName>
            </value>
            <value>
                <fullName>Gift Date Change</fullName>
            </value>
            <value>
                <fullName>Insufficient Funds</fullName>
            </value>
            <value>
                <fullName>Invalid Credit Card Number</fullName>
            </value>
            <value>
                <fullName>Pledge Payment to Gift</fullName>
            </value>
            <value>
                <fullName>Recognition Change</fullName>
            </value>
            <value>
                <fullName>Unsigned Check</fullName>
            </value>
            <value>
                <fullName>Void</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>