force-app/main/default/objects/ucinn_ascendv2__Payment__c/fields/ucinn_ascendv2__Adjustment_Reason_Other__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Adjustment_Reason_Other__c</fullName>
    <label>Adjustment Reason (Other)</label>
    <type>TextArea</type>
</CustomField>