force-app/main/default/objects/ucinn_ascendv2__Payment__c/fields/ucinn_ascendv2__Adjustment_Type__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Adjustment_Type__c</fullName>
    <label>Adjustment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Gift Adjustment</fullName>
            </value>
            <value>
                <fullName>Matching Gift Adjustment</fullName>
            </value>
            <value>
                <fullName>Pledge Adjustment</fullName>
            </value>
            <value>
                <fullName>Pledge Payment Adjustment</fullName>
            </value>
            <value>
                <fullName>To Gift Adjustment</fullName>
            </value>
            <value>
                <fullName>To Pledge Payment Adjustment</fullName>
            </value>
            <value>
                <fullName>Recurring Gift Payment Adjustment</fullName>
            </value>
            <value>
                <fullName>Matching Gift Payment Adjustment</fullName>
            </value>
            <value>
                <fullName>Recurring Gift Adjustment</fullName>
            </value>
            <value>
                <fullName>One-Time Membership Adjustment</fullName>
            </value>
            <value>
                <fullName>Installment Based Membership Adjustment</fullName>
            </value>
            <value>
                <fullName>Installment Based Membership Payment Adjustment</fullName>
            </value>
            <value>
                <fullName>Auto Renewing Membership Adjustment</fullName>
            </value>
            <value>
                <fullName>Auto Renewing Membership Payment Adjustment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>