force-app/main/default/objects/ucinn_ascendv2__Payment__c/fields/ucinn_ascendv2__Amount_Authorized_In_Payment_Gateway__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Amount_Authorized_In_Payment_Gateway__c</fullName>
    <description>Amount currently authorized in External Payment Gateway</description>
    <inlineHelpText>Amount currently authorized in External Payment Gateway</inlineHelpText>
    <label>Amount Authorized In Payment Gateway</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>