force-app/main/default/objects/ucinn_ascendv2__Payment__c/fields/ucinn_ascendv2__Amount_Paid_to_Date__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Amount_Paid_to_Date__c</fullName>
    <description>Payment Amount or Face Value associated with this payment whichever is greater. Assumption: Face value if it is non-zero, it is always greater than or equal to payment amount.</description>
    <label>Amount Paid to Date</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>