force-app/main/default/objects/ucinn_ascendv2__Payment__c/fields/ucinn_ascendv2__Amount_Paid_to_Date_Same_Designation__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Amount_Paid_to_Date_Same_Designation__c</fullName>
    <description>Payment Amount or Face Value associated with this payment provided there is no designation mismatch between this payment and its parent Designation Detail record. Bascially it is Amount paid (or face value) for the same designation.</description>
    <label>Amount Paid to Date (Same Designation)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>