force-app/main/default/objects/ucinn_ascendv2__Payment__c/fields/ucinn_ascendv2__Authorization_Request_ID__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Authorization_Request_ID__c</fullName>
    <description>Authorization Request ID pertaining to this payment.</description>
    <inlineHelpText>Authorization Request ID pertaining to this payment.</inlineHelpText>
    <label>Authorization Request ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>