force-app/main/default/objects/ucinn_ascendv2__Payment__c/fields/ucinn_ascendv2__Charge_Request_ID__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Charge_Request_ID__c</fullName>
    <description>Charge Request ID pertaining to this payment.</description>
    <inlineHelpText>Charge Request ID pertaining to this payment.</inlineHelpText>
    <label>Charge Request ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>