force-app/main/default/objects/ucinn_ascendv2__Payment__c/fields/ucinn_ascendv2__Contributor_Formula__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Contributor_Formula__c</fullName>
    <description>Shows the Constituent or Organization Name - for reporting</description>
    <formula>IF (INCLUDES(ucinn_ascendv2__Contact__r.ucinn_ascendv2__Contact_Type__c ,&quot;Voting Trustee&quot;) || INCLUDES(ucinn_ascendv2__Contact__r.ucinn_ascendv2__Contact_Type__c ,&quot;Former Trustee&quot;) || INCLUDES(ucinn_ascendv2__Contact__r.ucinn_ascendv2__Contact_Type__c ,&quot;Life Trustee&quot;) || INCLUDES(ucinn_ascendv2__Contact__r.ucinn_ascendv2__Contact_Type__c ,&quot;Trustee Spouse&quot;) || INCLUDES(ucinn_ascendv2__Contact__r.ucinn_ascendv2__Contact_Type__c ,&quot;Honorary Trustee&quot;), &quot;Trustee&quot;, ucinn_ascendv2__Contact__r.ucinn_ascendv2__Full_Name_Formula__c  +  ucinn_ascendv2__Account__r.Name)</formula>
    <label>Contributor</label>
    <type>Text</type>
</CustomField>