force-app/main/default/objects/ucinn_ascendv2__Payment__c/fields/ucinn_ascendv2__Created_In_External_Payment_Gateway__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Created_In_External_Payment_Gateway__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Denotes that the payment has been created in the external payment gateway.</description>
    <inlineHelpText>Denotes that the payment has been created in the external payment gateway.</inlineHelpText>
    <label>Created In External Payment Gateway</label>
    <type>Checkbox</type>
</CustomField>