force-app/main/default/objects/ucinn_ascendv2__Payment__c/fields/ucinn_ascendv2__Credit_Card_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Credit_Card_Expiration_Date__c</fullName>
    <label>Credit Card Expiration Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>