force-app/main/default/objects/ucinn_ascendv2__Payment__c/fields/ucinn_ascendv2__Credit_Card_Number__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Credit_Card_Number__c</fullName>
    <label>Credit Card Number</label>
    <length>19</length>
    <maskChar>X</maskChar>
    <maskType>creditCard</maskType>
    <type>EncryptedText</type>
</CustomField>