force-app/main/default/objects/ucinn_ascendv2__Payment__c/fields/ucinn_ascendv2__Credit_Card_Type__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Credit_Card_Type__c</fullName>
    <label>Credit Card Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Visa</fullName>
            </value>
            <value>
                <fullName>MasterCard</fullName>
            </value>
            <value>
                <fullName>American Express</fullName>
            </value>
            <value>
                <fullName>Discover</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>