force-app/main/default/objects/ucinn_ascendv2__Payment__c/fields/ucinn_ascendv2__CRS_Payment_Identifier__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__CRS_Payment_Identifier__c</fullName>
    <description>Network Transaction ID of the payment used for performing merchant-initiated transactions in the future.</description>
    <label>Payment Network Transaction ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>